<resources>
    <string name="app_name">Winlator Pulse</string>
    <string name="run">Run</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="containers">Containers</string>
    <string name="input_controls">Input Controls</string>
    <string name="contents">Contents</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="new_container">New Container</string>
    <string name="edit_container">Edit Container</string>
    <string name="creating_container">Creating Container...</string>
    <string name="removing_container">Removing Container...</string>
    <string name="duplicating_container">Duplicating Container...</string>
    <string name="installing_system_files">Installing System Files...</string>
    <string name="updating_system_files">Updating System Files...</string>
    <string name="starting_up">Starting up...</string>
    <string name="unable_to_install_system_files">Unable to install system files</string>
    <string name="keyboard">Keyboard</string>
    <string name="toggle_fullscreen">Toggle Fullscreen</string>
    <string name="exit">Exit</string>
    <string name="no_control_element_selected">No control element selected</string>
    <string name="scale">Scale</string>
    <string name="shape">Shape</string>
    <string name="type">Type</string>
    <string name="binding">Binding</string>
    <string name="binding_up">Binding Up</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="overlay_opacity">Overlay Opacity</string>
    <string name="opacity">Opacity</string>
    <string name="profile">Profile</string>
    <string name="select_profile">Select Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="untitled">Untitled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="no_profile_found">No profile found</string>
    <string name="do_you_want_to_remove_this_profile">Do you want to remove this profile?</string>
    <string name="do_you_want_to_duplicate_this_profile">Do you want to duplicate this profile?</string>
    <string name="do_you_want_to_duplicate_this_preset">Do you want to duplicate this preset?</string>
    <string name="do_you_want_to_remove_this_container">Do you want to remove this container?</string>
    <string name="do_you_want_to_duplicate_this_container">Do you want to duplicate this container?</string>
    <string name="do_you_want_to_remove_this_file">Do you want to remove this file?</string>
    <string name="do_you_want_to_remove_this_controller">Do you want to remove this controller?</string>
    <string name="do_you_want_to_remove_this_wine_version">Do you want to remove this Wine version?</string>
    <string name="do_you_want_to_remove_this_preset">Do you want to remove this preset?</string>
    <string name="do_you_want_to_remove_this_component_version">Do you want to remove this component version?</string>
    <string name="do_you_want_to_end_this_process">Do you want to end this process?</string>
    <string name="controls_editor">Controls Editor</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="container">Container</string>
    <string name="screen_size">Screen Size</string>
    <string name="refresh_rate">刷新率</string>
    <string name="system_max_refresh">系统最高刷新率</string>
    <string name="force_fullscreen_help">低分辨率游戏画面拉伸至全屏，避免黑边</string>
    <string name="help">帮助</string>
    <string name="lc_all">容器语言</string>
    <string name="timezone">容器时区</string>
    <string name="screen_orientation">Screen Orientation</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="swap_resolution">Swap Resolution</string>
    <string name="new_environment_variable">New Environment Variable</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="value">Value</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="processor_affinity_32_bit_apps">Processor Affinity (32-bit apps)</string>
    <string name="cursor_speed">Cursor Speed</string>
    <string name="relative_mouse_movement">Relative Mouse Movement</string>
    <string name="toggle_switch">Toggle Switch</string>
    <string name="profile_exported_to">Profile exported to</string>
    <string name="unable_to_import_profile">Unable to import profile</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="enable_csmt">Enable CSMT (Command Stream Multi-Thread)</string>
    <string name="gpu_name">GPU Name</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="enable_strict_shader_math">Enable Strict Shader Math</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="none">None</string>
    <string name="custom_text">Custom Text</string>
    <string name="icon">Icon</string>
    <string name="icon_size">Icon Size</string>
    <string name="icon_opacity">Icon Opacity</string>
    <string name="pressed_color">Pressed Color</string>
    <string name="select_local_icon">Select Local Icon</string>
    <string name="clear_icon">Clear</string>
    <string name="unable_to_load_image">Unable to load image</string>
    <string name="custom_icon_not_supported">This shortcut has no icon entry, cannot set a custom icon</string>
    <string name="import_icon_pack">Import Icon Pack</string>
    <string name="create_icon_pack">Create Icon Pack</string>
    <string name="export_icon_pack">Export Icon Pack</string>
    <string name="select_icon_pack">Select Icon Pack</string>
    <string name="remove_icon_pack">Remove Icon Pack</string>
    <string name="icon_pack_default_name">%1$s Icon Pack</string>
    <string name="icon_pack_none">Built-in Icons Only</string>
    <string name="icon_pack_disabled">Icon pack disabled</string>
    <string name="no_icon_pack_selected">No icon pack selected</string>
    <string name="do_you_want_to_remove_this_icon_pack">Do you want to remove this icon pack?</string>
    <string name="unable_to_import_icon_pack">Unable to import icon pack</string>
    <string name="unable_to_create_icon_pack">Unable to create icon pack</string>
    <string name="unable_to_import_icon_pack_with_reason">Unable to import icon pack: %1$s</string>
    <string name="unable_to_export_icon_pack">Unable to export icon pack</string>
    <string name="unable_to_remove_icon_pack">Unable to remove icon pack</string>
    <string name="icon_pack_imported">Imported icon pack: %1$s</string>
    <string name="icon_pack_created">Created icon pack: %1$s</string>
    <string name="icon_pack_exported">Exported icon pack: %1$s</string>
    <string name="icon_pack_selected">Selected icon pack: %1$s</string>
    <string name="icon_packs_selected">Enabled %1$d icon packs</string>
    <string name="icon_pack_removed">Removed icon pack: %1$s</string>
    <string name="icon_pack_manager">Icon Pack Manager</string>
    <string name="icon_pack_found_count">Found %1$d packs</string>
    <string name="no_icon_packs_available">No icon packs available</string>
    <string name="no_files_found">No files found</string>
    <string name="no_files_selected">No files selected</string>
    <string name="selected_file_count">%1$d files selected</string>
    <string name="select_current_directory">Press OK to select this directory</string>
    <string name="create_short">Create</string>
    <string name="install_short">Install</string>
    <string name="create_icon_pack_dialog_title">Create New Icon Pack</string>
    <string name="icon_pack_name_hint">Name</string>
    <string name="icon_pack_author_hint">Author (Optional)</string>
    <string name="select_custom_icons">Select Custom Icons</string>
    <string name="no_icons_selected">No icons selected</string>
    <string name="selected_icon_count">Selected %1$d icons</string>
    <string name="icon_pack_name_required">Please enter an icon pack name</string>
    <string name="icon_pack_icons_required">Please select at least one icon</string>
    <string name="enable_icon_pack">Enable</string>
    <string name="disable_icon_pack">Disable</string>
    <string name="icon_pack_author_format">Author: %1$s</string>
    <string name="icon_pack_icon_count_format">Icons: %1$d</string>
    <string name="icon_pack_size_format">Size: %1$s</string>
    <string name="icon_pack_contains_count">%1$s contains %2$d icons</string>
    <string name="add_single_icon">Add One</string>
    <string name="add_multiple_icons">Add Multiple</string>
    <string name="export_icon_pack_short">Export Icon Pack</string>
    <string name="do_you_want_to_remove_this_icon">Do you want to remove this icon?</string>
    <string name="icon_pack_dimensions_format">Dimensions: %1$dx%2$d</string>
    <string name="icon_pack_icon_title_format">Icon %1$d</string>
    <string name="unknown">Unknown</string>
    <string name="import_profile">Import Profile</string>
    <string name="export_profile">Export Profile</string>
    <string name="touchpad_help">Touchpad Help</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="duplicate">Duplicate</string>
    <string name="about">About</string>
    <string name="credits_and_third_party_apps">Credits and Third-party apps</string>
    <string name="external_controllers">External Controllers</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="loading">Loading...</string>
    <string name="press_any_button_on_your_controller">Press any button on your controller</string>
    <string name="bindings">Bindings</string>
    <string name="range">Range</string>
    <string name="orientation">Orientation</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="columns">Columns</string>
    <string name="note">Note</string>
    <string name="move_mouse_when_pressed">Move Mouse when pressed</string>
    <string name="export_container_title">Export Container</string>
    <string name="compression_level">Compression Level</string>
    <string name="author">Author</string>
    <string name="emulator_version">Emulator Version</string>
    <string name="two_fingers_drag">Two-fingers Drag</string>
    <string name="two_fingers_right_click">Two-fingers Right Click</string>
    <string name="long_press_right_click">Long Press Right Click</string>
    <string name="pinch_zoom_enabled">Pinch Zoom</string>
    <string name="short_drag_enabled">Short Drag</string>
    <string name="save_title">存档名称</string>
    <string name="save_title_hint">例如：游戏名-存档位1</string>
    <string name="save_path">存档路径</string>
    <string name="save_path_hint">容器内存档文件夹的完整路径</string>
</resources>