<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            style="@style/ComboBox"
            android:id="@+id/SType"
            android:layout_width="match_parent" />

        <LinearLayout
            android:id="@+id/LLShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SShape"
                android:layout_width="match_parent" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scale"/>

        <com.winlator.widget.SeekBar
            android:id="@+id/SBScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:maxValue="400"
            app:minValue="50"
            app:step="5"
            app:suffix="%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opacity" />

        <com.winlator.widget.SeekBar
            android:id="@+id/SBOpacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffix="%"
            app:step="5"
            app:minValue="0"
            app:maxValue="100" />

        <LinearLayout
            android:id="@+id/LLRangeOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SRange"
                android:layout_width="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation" />

            <RadioGroup
                android:id="@+id/RGOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horizontal" />

                <RadioButton
                    android:id="@+id/RBVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/columns" />

            <com.winlator.widget.NumberPicker
                android:id="@+id/NPColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="3"
                app:maxValue="8" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLMIDIKeyOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SNote"
                android:layout_width="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLRadialMenuOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bindings" />

            <com.winlator.widget.NumberPicker
                android:id="@+id/NPBindings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="3"
                app:maxValue="6" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <CheckBox
            android:id="@+id/CBToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_switch" />

        <CheckBox
            android:id="@+id/CBMouseMoveMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_mouse_when_pressed" />

        <LinearLayout
            android:id="@+id/LLCustomTextIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_text" />

            <EditText
                style="@style/EditText"
                android:id="@+id/ETCustomText"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:hint="@string/none"
                android:inputType="textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/IVCustomIconPreview"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/icon_background"
                    android:padding="6dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_image_picker" />

                <Button
                    android:id="@+id/BTBrowseCustomIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/select_local_icon" />

                <Button
                    android:id="@+id/BTClearCustomIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/clear_icon" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/LLIconList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/icon_size" />

            <com.winlator.widget.SeekBar
                android:id="@+id/SBIconScale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="200"
                app:minValue="40"
                app:step="5"
                app:suffix="%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_opacity" />

            <com.winlator.widget.SeekBar
                android:id="@+id/SBIconOpacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:maxValue="100"
                app:minValue="0"
                app:step="5"
                app:suffix="%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/pressed_color" />

            <com.winlator.widget.ColorPickerView
                android:id="@+id/CPVPressedColor"
                android:layout_width="84dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>