<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/SVExport"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TVExportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_container_title"
            android:textColor="?attr/colorPrimaryText"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ETName"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="14dp"
            android:hint="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/compression_level" />

        <com.winlator.widget.SeekBar
            android:id="@+id/SBCompressionLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:minValue="1"
            app:maxValue="19" />

        <EditText
            android:id="@+id/ETAuthor"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="14dp"
            android:hint="@string/author"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/emulator_version" />

        <TextView
            android:id="@+id/TVEmulatorVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSecondaryText"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>
